# e-commerce-DB

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
notebooks/: exploration.ipynb  test.ipynb
scripts/: init-db.sh  shutdown-db.sh
sql/: 01-schema.sql  02-load-data.sql  03-views.sql
