[project]
name = "e-commerce-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
